--- a/Dia30/style.css
+++ b/Dia30/style.css
@@ -34,7 +34,7 @@ body{
     transition: 0.5s;
 }
 
-.card:hover img{
+.card .cards.expanded img{
     left: 80%;
     height: 450px;
 }
@@ -49,7 +49,7 @@ body{
     transition: 0.5s;
 }
 
-.card:hover .content{
+.card .cards.expanded .content{
     left: 0%;
     opacity: 1;
     visibility: visible;
@@ -66,3 +66,6 @@ body{
     font-size: 15px;
 }
 
+input{
+    display: none;
+}
